--- a/animals.html
+++ b/animals.html
@@ -24,4 +24,14 @@
 </div>
 
 </body>
+
 </html>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="animals.html">Animals</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tickets.html">Tickets</a>
+  <a href="events.html">Events</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
