--- a/tickets.html
+++ b/tickets.html
@@ -17,4 +17,14 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="animals.html">Animals</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="tickets.html">Tickets</a>
+  <a href="events.html">Events</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
