--- a/contact.html
+++ b/contact.html
@@ -59,3 +59,7 @@
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
 </nav>
+<a href="tel:9316369690">9316369690</a><a href="tel:9316369690">9316369690</a>
+<a href="https://www.google.com/maps/search/Pradyuman+Zoological+Park+Rajkot" target="_blank">
+Pradyuman Park, Rajkot, Gujarat
+</a>
